--- a/index.html
+++ b/index.html
@@ -1,221 +1,274 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio</title>
-    <style>
-        * {
-  margin: 0;
-  padding: 0;
-  font-family: 'Baloo Chettan', cursive;
-  text-align: center;
-}
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="bootstrap.css">
 
-#navbar {
-  position: fixed;
-  text-align: right;
-  width: 100%;
-  background-color: #FAEBD7;
-  padding: 5px;
-  font-size: 1.2em;
-  z-index: 1;
-}
+  <title>Portfolio</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      font-family: 'Baloo Chettan', cursive;
+      text-align: center;
+    }
 
-#navbar a {
-  display: inline-block;
-  margin-bottom: 20px;
-  margin-top: 10px;
-  text-decoration: none;
-  list-style: none;
-}
+    #navbar {
+      position: fixed;
+      text-align: right;
+      width: 100%;
+      background-color: #FAEBD7;
+      padding: 5px;
+      font-size: 1.2em;
+      z-index: 1;
+    }
 
-#navbar li {
-  margin-right: 40px;
-}
+    #navbar a {
+      display: inline-block;
+      margin-bottom: 20px;
+      margin-top: 10px;
+      text-decoration: none;
+      list-style: none;
+    }
 
-#navbar li:hover {
-  color: silver;
-}
+    #navbar li {
+      margin-right: 40px;
+    }
 
-#welcome-section {
-  background: url("https://images.unsplash.com/photo-1476820865390-c52aeebb9891?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80");
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding-top: 40vh;
-  min-height: 60vh;
-  text-align: center;
-}
+    #navbar li:hover {
+      color: silver;
+    }
 
-#welcome-section h1 {
-  position: relative;
-  color: red;
-}
+    #welcome-section {
+      background: url("https://images.unsplash.com/photo-1476820865390-c52aeebb9891?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80");
+      background-repeat: no-repeat;
+      background-size: cover;
+      padding-top: 40vh;
+      height: 640px;
+      text-align: center;
+    }
 
-#projects {
-  padding-top: 20px;
-}
+    #welcome-section h1 {
+      position: relative;
+      color: red;
+    }
 
-#projects h2 {
-  text-align: center;
- 
-}
+    #o_meni {
+      margin-top: 30px;
+      text-align: center;
+      font-size: 25px;
+      font-style: italic;
+      background-color: #FAEBD7;
+      display: flex;
 
-.project-tile {
-  text-align: center;
-  text-decoration: none;
-  color: black;
-  display: inline-block;
-  overflow: hidden;
-  border: 1px solid gray;
-  height: 210px;
-  width: 290px;
-  margin: 40px;
-}
+    }
 
-.project-title {
-  margin: 5px;
-}
+    #projects {
+      padding-top: 20px;
+    }
 
-.show-all {
-  border: 1px solid yellow;
-  text-decoration: none;
-  display: block;
-  width: 120px;
-  padding: 10px;
-  font-weight: bold;
-  color: yellow;
-  background-color: darkslateblue;
-  text-align: center;
-  margin: 0 auto;
-  margin-bottom: 30px;
-  border-radius: 11px;
-  cursor: pointer;
-}
+    #projects h2 {
+      text-align: center;
 
-.show-all:hover {
-  background-color: blueviolet;
-}
+    }
+
+    .project-tile {
+      text-align: center;
+      text-decoration: none;
+      color: black;
+      display: inline-block;
+      overflow: hidden;
+      border: 1px solid gray;
+      height: 210px;
+      width: 290px;
+      margin: 40px;
+    }
+
+    .project-title {
+      margin: 5px;
+    }
+
+    .show-all {
+      border: 1px solid yellow;
+      text-decoration: none;
+      display: block;
+      width: 120px;
+      padding: 10px;
+      font-weight: bold;
+      color: yellow;
+      background-color: darkslateblue;
+      text-align: center;
+      margin: 0 auto;
+      margin-bottom: 30px;
+      border-radius: 11px;
+      cursor: pointer;
+    }
 
 
-#contact {
- 
-}
 
-.header {
-  padding: 120px;
-}
+    #contact {
+      background-color: #FAEBD7;
 
-#contact a {
+    }
 
-}
+    .header {
+      padding: 120px;
+    }
 
-footer a:hover {
-  background-color: yellow;
-  color: black;
 
-}
+    footer a:hover {
+      background-color: yellow;
+      color: black;
 
-footer {
-  text-align: center;
-  padding: 10px;
-  background: #A9A9A9;
-  text-align: center;
-}
+    }
 
-footer a {
+    footer {
+      text-align: center;
+      padding: 10px;
+      background: #A9A9A9;
+      text-align: center;
+    }
 
-  display: inline-block;
-  margin: 20px 20px 80px 30px;
-  text-decoration: none;
-  list-style-type: none;
-  border: 1px solid gray;
-  border-radius: 50%;
-  width: 90px;
-  height: 50px;
-  line-height: 50px;
-  background-color: green;
-}
+    footer a {
 
-@media only screen and (max-width: 600px) {
-  #navbar {
-    text-align: center;
-  }
-  nav li {
-    margin: 10px;
-  }
-  #projects {
-    margin: 20px 0;
-  }
-}
-    </style>
+      display: inline-block;
+      margin: 20px 20px 80px 30px;
+      text-decoration: none;
+      list-style-type: none;
+      border: 1px solid gray;
+      border-radius: 50%;
+      width: 90px;
+      height: 50px;
+      line-height: 50px;
+      background-color: green;
+    }
+
+    @media only screen and (max-width: 600px) {
+      #navbar {
+        text-align: center;
+      }
+
+      nav li {
+        margin: 10px;
+      }
+
+      #projects {
+        margin: 20px 0;
+      }
+    }
+  </style>
 </head>
+
 <body>
-    
-
-<nav id="navbar">
-  <a href="#welcome-section"><li>Home</li></a>
-  <a href="#welcome-section"><li>About</li></a>
-  <a href="#projects"><li>Work</li></a>
-  <a href="#contact"><li>Contact</li></a>
-</nav>
-
-<div id="welcome-section">
-  
-  <h1>Welcome to my Portfolio</h1>
-  
-</div>
-
-<div>
-  
-  <h2 id="projects">These are some of my projects...</h2>
-  
-  <a href="#" target="_blank" class="project-tile">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGlnNBCdA2Pz6r-vFJ6w2ZxvocFfxUfMAAUiikORjX85BxALwYhA" alt="project">
-    <div class="project-title">Tribute Page</div>
-  </a>
-  
-  <a href="#" target="_blank" class="project-tile">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGlnNBCdA2Pz6r-vFJ6w2ZxvocFfxUfMAAUiikORjX85BxALwYhA" alt="project">
-    <div class="project-title">Survey Form</div>
-  </a>
-  
-  <a href="#" target="_blank" class="project-tile">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGlnNBCdA2Pz6r-vFJ6w2ZxvocFfxUfMAAUiikORjX85BxALwYhA" alt="project">
-    <div class="project-title">Landing Page</div>
-  </a>
-  
-  <a href="#" target="_blank" class="project-tile">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGlnNBCdA2Pz6r-vFJ6w2ZxvocFfxUfMAAUiikORjX85BxALwYhA" alt="project">
-    <div class="project-title">Technical Document Page</div>
-  </a>
-  
-  
-</div>
-
-<div id="contact">
-  
- 
-  
- 
-  
-</div>
 
 
-<footer>
-  </div class="header">
-  
-  <a href="https://facebook.com" target="_blank" id="profile-link">Facebook</a>
-  <a href="https://github.com" target="_blank" id="profile-link">GitHub</a>
-  <a href="https://twitter.com" target="_blank" id="profile-link">Twitter</a>
-  <a href="https://linkedin.com" target="_blank" id="profile-link">LinkedIn</a>
-  
-</div>
-    <p> -This is my simple example of portfolio- </p>
-</footer>
+
+  <nav id="navbar">
+    <a href="#welcome-section">
+      <li>Naslovna</li>
+    </a>
+    <a href="#o_meni">
+      <li>O meni</li>
+    </a>
+    <a href="#projects">
+      <li>Projekti</li>
+    </a>
+    <a href="#contact">
+      <li>Kontakt</li>
+    </a>
+  </nav>
+
+  <div id="welcome-section">
+
+    <h1>Dobro došli na moj sajt!</h1>
+
+  </div>
+  <div id="o_meni">
+    <p> Ja sam Dejan Savković, diplomirani pravnik. Trenutno radim kod
+      javnog beležnika. Istovremeno pohađam IT prekvalifikaciju na Matematičkom fakultetu.
+      U pitanju je kurs Veb programiranja.
+    </p>
+    <img src="profilna.jpg" alt="slika">
+
+  </div>
+  <div>
+
+    <h2 id="projects">Moji projekti...</h2>
+
+    <a href="#" target="_blank" class="project-tile">
+      <img
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGlnNBCdA2Pz6r-vFJ6w2ZxvocFfxUfMAAUiikORjX85BxALwYhA"
+        alt="project">
+      <div class="project-title">Projekat 1</div>
+    </a>
+
+    <a href="#" target="_blank" class="project-tile">
+      <img
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGlnNBCdA2Pz6r-vFJ6w2ZxvocFfxUfMAAUiikORjX85BxALwYhA"
+        alt="project">
+      <div class="project-title">Projekat 2</div>
+    </a>
+
+    <a href="#" target="_blank" class="project-tile">
+      <img
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGlnNBCdA2Pz6r-vFJ6w2ZxvocFfxUfMAAUiikORjX85BxALwYhA"
+        alt="project">
+      <div class="project-title">Projekat 3</div>
+    </a>
+
+    <a href="#" target="_blank" class="project-tile">
+      <img
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGlnNBCdA2Pz6r-vFJ6w2ZxvocFfxUfMAAUiikORjX85BxALwYhA"
+        alt="project">
+      <div class="project-title">Projekat 4</div>
+    </a>
+
+
+  </div>
+
+  <div id="contact" class='container mt-5 mb-3'>
+
+    <form>
+      <h3>Ukoliko Vam treba pravna pomoć, kontaktirajte me!</h3>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="ime">Ime:</label>
+          <input type="text" class="form-control" id="ime" placeholder="Unesite Vaše ime">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="prezime">Prezime</label>
+          <input type="text" class="form-control" id="prezime" placeholder="Unesite Vaše prezime">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="poruka">Vaša poruka:</label>
+        <textarea class="form-control" rows="5" id="poruka" placeholder="Unesite Vašu poruku..."></textarea>
+      </div>
+
+      <button type="submit" class="btn btn-primary">Pošalji</button>
+    </form>
+  </div>
+
+  </form>
+
+
+  <footer>
+    </div class="header">
+
+    <a href="https://facebook.com" target="_blank" id="profile-link">Facebook</a>
+    <a href="https://github.com" target="_blank" id="profile-link">GitHub</a>
+    <a href="https://twitter.com" target="_blank" id="profile-link">Twitter</a>
+    <a href="https://linkedin.com" target="_blank" id="profile-link">LinkedIn</a>
+
+    </div>
+    <p> Copyright &copy: 2019 </p>
+  </footer>
 
 
 
 </body>
+
 </html>
